# mercury-midend-api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  flake.nix  generate_response.py  pyproject.toml  requirements.txt  server.py
backup/: docker-compose.yml
routes/: __init__.py  dependencies.py  queue.py  system.py  user.py
sql/: db.sql
utils/: __init__.py  auth.py  database.py  firebase.py  global_queue.py  logging_helper.py  memory_queue.py  models.py  queue_helpers.py
