[tool.poetry]
name = "mercury-api"
version = "0.1.0"
description = ""
authors = ["0oAstro <79555780+0oAstro@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
httpx = {extras = ["http2"], version = "^0.28.1"}
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
slowapi = "^0.1.9"
python-dotenv = "^1.0.1"
uvloop = "^0.21.0"
streamlit = "^1.41.1"
groq = "^0.16.0"
tqdm = "^4.67.1"
firebase = "^4.0.1"
firebase-admin = "^6.6.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
